rum-js/k8s-nginx-ingress-controller-rum-injection-auto-instr/example-ingress-with-splunk-rum-annotations.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      sub_filter '</head>' '<script src="https://cdn.signalfx.com/o11y-gdi-rum/latest/splunk-otel-web.js" crossorigin="anonymous"></script>
        <script>
          SplunkRum.init({
          realm: "<e.g. us1>",
          rumAccessToken: "<redacted>",
          applicationName: "jek-rum",
          deploymentEnvironment: "dev"
        });
        </script></head>';
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 8080
          - path: /v3
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
